--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,13 @@
+.flip-card-inner {
+  transform-style: preserve-3d;
+}
 
+.flip-card:hover .flip-card-inner,
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  -webkit-backface-visibility: hidden;
+}
